# ClipFlow

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hotkeys.rs  lib.rs  main.rs  project.rs  state.rs  types.rs
src-tauri/src/capture/: audio.rs  cursor.rs  keystroke.rs  mod.rs  screen.rs
src-tauri/src/export/: encoder.rs  gif.rs  mod.rs
src-tauri/src/recording/: manager.rs
src-tauri/src/region/: selector.rs
src/components/: Logo.tsx
src/components/annotations/: AnnotationEditor.tsx  AnnotationToolbar.tsx
src/components/controls/: AudioSourceSelector.tsx  CountdownSelector.tsx  RecordButton.tsx  StatusIndicator.tsx  ThemeToggle.tsx
src/components/export/: ExportButton.tsx
src/components/onboarding/: OnboardingOverlay.tsx
src/components/overlay/: RegionOverlay.tsx
src/components/preview/: VideoPreview.tsx
src/components/project/: ProjectListModal.tsx  SaveProjectButton.tsx
src/components/subtitles/: SubtitleEditor.tsx
src/components/timeline/: SortableClipCard.tsx  Timeline.tsx  TransitionIcon.tsx  TransitionPresets.tsx  TrimModal.tsx
src/lib/: tauri.ts  types.ts
src/stores/: appStore.ts
