[package]
name = "clipflow"
version = "0.1.0"
edition = "2021"
description = "Screen recording and assembly tool"

[lib]
name = "clipflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
dirs = "6"
base64 = "0.22"
opener = "0.7"
ffmpeg-sidecar = "2.0"
image = "0.25"
cpal = "0.15"
hound = "3.5"
arboard = "3"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
]
